kubernetes/apps/networking/external-services/endpoints/arrstack.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app arrstack
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: media-services.${SECRET_DOMAIN_2}
  ports:
    - name: plex
      port: &plex 32400
      protocol: TCP
      targetPort: *plex
    - name: overseerr
      port: &overseerr 5055
      protocol: TCP
      targetPort: *overseerr
    - name: guacamole
      port: &guacamole 8086
      protocol: TCP
      targetPort: *guacamole
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app arrstack-plex
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: "plex.${SECRET_DOMAIN_2}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    #nginx.ingress.kubernetes.io/server-snippet: |
    #  location = / {
    #    return 301 https://plex.${SECRET_DOMAIN_2}/web/index.html;
    #  }
    hajimari.io/icon: mdi:pirate
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host "plex.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arrstack
                port:
                  name: plex
  tls:
    - hosts:
        - *host
      secretName: "arrstack-${SECRET_DOMAIN_2/./-}-production-tls"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app arrstack-overseerr
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: "overseerr.${SECRET_DOMAIN_2}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    hajimari.io/icon: mdi:play-box
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host "overseerr.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arrstack
                port:
                  name: overseerr
  tls:
    - hosts:
        - *host
      secretName: "arrstack-${SECRET_DOMAIN_2/./-}-production-tls"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app arrstack-desktop
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: "desktop.${SECRET_DOMAIN_2}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    hajimari.io/icon: mdi:monitor
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host "desktop.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arrstack
                port:
                  name: guacamole
  tls:
    - hosts:
        - *host
      secretName: "arrstack-${SECRET_DOMAIN_2/./-}-production-tls"
#############################################################################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app arrstack-plex-2
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: "plex.${SECRET_DOMAIN_2}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN_2}"
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  rewrite ^$ https://plex.${SECRET_DOMAIN_2}/web$request_uri permanent;
    hajimari.io/icon: mdi:pirate
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host "plex.${SECRET_DOMAIN_2}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arrstack
                port:
                  name: plex
  tls:
    - hosts:
        - *host
      secretName: "arrstack-${SECRET_DOMAIN_2/./-}-production-tls"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app arrstack-overseerr-2
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: "overseerr.${SECRET_DOMAIN_2}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN_2}"
    hajimari.io/icon: mdi:play-box
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host "overseerr.${SECRET_DOMAIN_2}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arrstack
                port:
                  name: overseerr
  tls:
    - hosts:
        - *host
      secretName: "arrstack-${SECRET_DOMAIN_2/./-}-production-tls"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app arrstack-desktop-2
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: "desktop.${SECRET_DOMAIN_2}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN_2}"
    hajimari.io/icon: mdi:play-box
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host "desktop.${SECRET_DOMAIN_2}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arrstack
                port:
                  name: guacamole
  tls:
    - hosts:
        - *host
      secretName: "arrstack-${SECRET_DOMAIN_2/./-}-production-tls"
