kubernetes/apps/networking/external-services/endpoints/office.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app office-webui
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: archive.${SECRET_DOMAIN_2}
  ports:
    - name: http
      port: &port 9980
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app office-webui
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: "archive.${SECRET_DOMAIN_2}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_2}"
    hajimari.io/icon: mdi:harddisk
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host office.${SECRET_DOMAIN_2}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 9980
  tls:
    - hosts:
        - *host
      secretName: "office-${SECRET_DOMAIN_2/./-}-production-tls"
